# rust-arxiv-podcast

./: Cargo.toml  README.md
.trunk/: trunk.yaml
src/: arxiv.rs  fast_speech.rs  inflect_number.rs  lib.rs  main.rs
src/fast_speech/: inflect_number.rs  mod.rs  tokenizer.rs
