[package]
name = "rust-arxiv-podcast"
version = "0.1.0"
edition = "2018"
authors = ["Sandro Cavallari"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = { version = "0.21", features = [ "serialize" ] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] } 